syntax = "proto3";

option java_package = "org.beangle.security.session.protobuf";
option java_outer_classname = "Model";

message Account {
    string name = 1;
    string description = 2;
    int32 categoryId = 3;
    string remoteToken = 4;
    int32 status = 5;
    repeated string authorities = 6;
    repeated string permissions = 7;
    map<string, string> details = 8;
}

message Agent {
    string name = 1;
    string ip = 2;
    string os = 3;
}

message Session {
    string id = 1;
    Account principal = 2;
    int64 loginAt = 3;
    int64 lastAccessAt = 4;
    Agent agent = 5;
    int32 ttiSeconds = 6;
}
